# sm_rewrite

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  sm.ini  vcpkg-configuration.json
Port_Extraction/: common_data.py  out_92_original.txt
Port_Extraction/bank_80/: extract_area_elevator_bits.py  extract_bank_80.py
Port_Extraction/bank_81/: extract_bank_81.py
Port_Extraction/bank_82/: extract_bank_82.py
Port_Extraction/bank_84/: extract_bank_84.py
Port_Extraction/bank_85/: extract_bank_85.py
Port_Extraction/bank_86/: extract_bank_86.py
Port_Extraction/bank_88/: extract_bank_88.py
Port_Extraction/bank_89/: extract_bank_89.py
Port_Extraction/bank_8B/: extract_bank_8B.py
Port_Extraction/bank_90/: extract_bank_90.py
Port_Extraction/bank_91/: extract_bank_91.py  extract_samus_pose_transitions.py  poses.txt
Port_Extraction/bank_92/: extract_bank_92.py
Port_Extraction/bank_93/: extract_bank_93.py
Port_Extraction/bank_94/: extract_bank_94.py
Port_Extraction/bank_9B/: extract_bank_9B.py
Port_Extraction/bank_A0/: extract_bank_A0.py
Port_Extraction/bank_A2/: extract_bank_A2.py
Port_Extraction/bank_A3/: extract_bank_A3.py
Port_Extraction/bank_A4/: extract_bank_A4.py
Port_Extraction/bank_A5/: extract_bank_A5.py
Port_Extraction/bank_A6/: extract_bank_A6.py
Port_Extraction/bank_A7/: extract_bank_A7.py
Port_Extraction/bank_A8/: extract_bank_A8.py
Port_Extraction/bank_A9/: extract_bank_A9.py
Port_Extraction/bank_AA/: extract_bank_AA.py
Port_Extraction/bank_AD/: extract_bank_AD.py
Port_Extraction/bank_B2/: extract_bank_B2.py
Port_Extraction/bank_B3/: extract_bank_B3.py
Port_Extraction/bank_B4/: extract_bank_B4.py
docs/: banks.md  code_flow.md  coroutines.md  data_structures.md  math.md  misc.md  rewrite_example.md
src/: CMakeLists.txt  config.c  config.h  enemy_types.h  extra_features.h  features.h  funcs.h  ida_types.h  main.c  resource.h  sm.aps  sm.vcxproj  sm.vcxproj.filters  sm_80.c  sm_80.h  sm_81.c  sm_81.h  sm_82.c  sm_82.h  sm_83.c  sm_83.h  sm_84.c  sm_84.h  sm_85.c  sm_85.h  sm_86.c  sm_86.h  sm_87.c  sm_87.h  sm_88.c  sm_88.h  sm_89.c  sm_89.h  sm_8b.c  sm_8b.h  sm_8d.c  sm_8f.c  sm_8f.h  sm_90.c  sm_90.h  (+51 more)
(+44 files in other folders)
